# gspread-formatting

./: .gitignore  .travis.secrets.tar.gz.enc  .travis.yml  .travis_install_phase.sh  CHANGELOG.rst  CONDITIONALS.rst  LICENSE  MANIFEST.in  README.rst  creds.json.enc  diffs_to_discovery.py  gspread_formatting.py  pyproject.toml  python-package.yml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  test.py  tests.config.enc  tests.config.example  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  make.bat
gspread_formatting/: __init__.py  batch.py  batch_update_requests.py  conditionals.py  dataframe.py  functions.py  models.py  util.py
