[bdist_wheel]
universal = 1

[metadata]
version=file:VERSION
license_file=LICENSE
long_description=file:README.rst
long_description_content_type=text/x-rst

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1


[upload_sphinx]
upload-dir = docs/_build/html
repository = https://pypi.python.org/pypi

